# Modificacions en els desplegaments del campus de l'IOC
### IOC_CAMPUS_V6.0.9
  * FIX Upgrade Connectors

### IOC_CAMPUS_V6.0.8
  * Fix 1148-2024-0186
  * Fix 1148-2024-0272
  * blocks/completion_progress: Pluggin upgraded
  * blocks/dedication: Pluggin upgraded
  * blocks/filtered_course_list: Pluggin upgraded
  * blocks/xp: Pluggin upgraded
  * Add blocks/timestat
  * course/format/grid: Pluggin upgraded
  * filter/wiris: Pluggin upgraded
  * lib/editor/atto/plugins/fullscreen: Pluggin upgraded
  * lib/editor/atto/plugins/wiris: Pluggin upgraded
  * lib/editor/tinymce/plugins/tiny_mce_wiris: Pluggin upgraded
  * local/mail: Pluggin upgraded
  * local/redislock: Pluggin upgraded
  * mod/geogebra: Pluggin upgraded
  * mod/hotpot: Pluggin upgraded
  * mod/hvp (new commits, modified content)
  * mod/journal: Pluggin upgraded
  * mod/oublog: Pluggin upgraded
  * mod/scheduler: Pluggin upgraded
  * question/behaviour/adaptive_adapted_for_coderunner: Pluggin upgraded
  * question/type/coderunner: Pluggin upgraded
  * question/type/essaywiris: Pluggin upgraded
  * question/type/matchwiris: Pluggin upgraded
  * question/type/multianswerwiris: Pluggin upgraded
  * question/type/multichoicewiris: Pluggin upgraded
  * question/type/shortanswerwiris: Pluggin upgraded
  * question/type/truefalsewiris: Pluggin upgraded
  * question/type/wq: Pluggin upgraded

### IOC_CAMPUS_V6.0.7
  * local/mail: Pluggin upgraded 

### IOC_CAMPUS_V6.0.6
  * local/mail: Plugin upgraded (1148-2024-0150)
  * eliminació @PATCH IOC029 (1148-2024-0101)

### IOC_CAMPUS_V6.0.5
  * local/mail: Plugin upgraded (1148-2024-0150)

### IOC_CAMPUS_V6.0.4
  * local/mail: Plugin upgraded (1148-2024-0048)

### IOC_CAMPUS_V6.0.3
  * Added filter codes pluggin (1148-2024-0052)

### IOC_CAMPUS_V6.0.2
  * Changes in css styles in boostioc theme (1148-2024-0051)
  * Added mass action plugin (1148-2024-0052)
  * Fix local/courseoverview: Change function toggleVisibility (1148-2024-0054)

### IOC_CAMPUS_V6.0.1