@@ -1548,7 +1548,7 @@ content: url([[pix:theme|ioc-caret]]);
     padding-bottom: 12px;
     text-align: center;
     border: 2px solid #fff;
-    white-space: nowrap;
+    white-space: normal;
 }
   .taula-simple thead th:first-of-type {
     color: transparent;
