@@ -1,6 +1,10 @@
 # Modificacions en els desplegaments del campus de l'IOC
+### IOC_CAMPUS_V6.0.10
+  * Upgrade IOC theme
+
 ### IOC_CAMPUS_V6.0.9
   * FIX Upgrade Connectors
+  * Modul mod/schedule PATCH IOC053
 
 ### IOC_CAMPUS_V6.0.8
   * Fix 1148-2024-0186
